fix stats aligning

--- a/src/Dashboard/Menu/Profile/profile.css
+++ b/src/Dashboard/Menu/Profile/profile.css
@@ -93,6 +93,7 @@
     border-left: 1px solid rgba(255, 255, 255, 0.05);
 }
 
+
 .profile-menu-general ul, .profile-user-stats ul{
     width: 100%;
     list-style-type: none;
@@ -100,6 +101,9 @@
     justify-content: space-around;
 }
 
+.profile-user-stats ul{
+    justify-content: end;    /* override */
+}
 
 .profile-menu-general ul li{
     margin-right: 12px;
